crates/runtime/src/tests/snapshots/query_type_object_construct.snap
---
source: crates/runtime/src/tests/queries.rs
description: "\"SELECT OBJECT_CONSTRUCT(\n  'oname', 'abc',\n  'created_date', '2020-01-18'::DATE\n)::OBJECT(\n  oname VARCHAR,\n  created_date DATE\n);\""
snapshot_kind: text
---
(
    Ok(
        Statement(
            Query(
                Query {
                    with: None,
                    body: Select(
                        Select {
                            select_token: TokenWithSpan {
                                token: Word(
                                    Word {
                                        value: "SELECT",
                                        quote_style: None,
                                        keyword: SELECT,
                                    },
                                ),
                                span: Span(Location(0,0)..Location(0,0)),
                            },
                            distinct: None,
                            top: None,
                            top_before_distinct: false,
                            projection: [
                                UnnamedExpr(
                                    Cast {
                                        kind: DoubleColon,
                                        expr: Function(
                                            Function {
                                                name: ObjectName(
                                                    [
                                                        Ident {
                                                            value: "OBJECT_CONSTRUCT",
                                                            quote_style: None,
                                                            span: Span(Location(0,0)..Location(0,0)),
                                                        },
                                                    ],
                                                ),
                                                uses_odbc_syntax: false,
                                                parameters: None,
                                                args: List(
                                                    FunctionArgumentList {
                                                        duplicate_treatment: None,
                                                        args: [
                                                            Unnamed(
                                                                Expr(
                                                                    Value(
                                                                        SingleQuotedString(
                                                                            "oname",
                                                                        ),
                                                                    ),
                                                                ),
                                                            ),
                                                            Unnamed(
                                                                Expr(
                                                                    Value(
                                                                        SingleQuotedString(
                                                                            "abc",
                                                                        ),
                                                                    ),
                                                                ),
                                                            ),
                                                            Unnamed(
                                                                Expr(
                                                                    Value(
                                                                        SingleQuotedString(
                                                                            "created_date",
                                                                        ),
                                                                    ),
                                                                ),
                                                            ),
                                                            Unnamed(
                                                                Expr(
                                                                    Cast {
                                                                        kind: DoubleColon,
                                                                        expr: Value(
                                                                            SingleQuotedString(
                                                                                "2020-01-18",
                                                                            ),
                                                                        ),
                                                                        data_type: Date,
                                                                        format: None,
                                                                    },
                                                                ),
                                                            ),
                                                        ],
                                                        clauses: [],
                                                    },
                                                ),
                                                filter: None,
                                                null_treatment: None,
                                                over: None,
                                                within_group: [],
                                            },
                                        ),
                                        data_type: Custom(
                                            ObjectName(
                                                [
                                                    Ident {
                                                        value: "OBJECT",
                                                        quote_style: None,
                                                        span: Span(Location(0,0)..Location(0,0)),
                                                    },
                                                ],
                                            ),
                                            [
                                                "oname",
                                                "VARCHAR",
                                                "created_date",
                                                "DATE",
                                            ],
                                        ),
                                        format: None,
                                    },
                                ),
                            ],
                            into: None,
                            from: [],
                            lateral_views: [],
                            prewhere: None,
                            selection: None,
                            group_by: Expressions(
                                [],
                                [],
                            ),
                            cluster_by: [],
                            distribute_by: [],
                            sort_by: [],
                            having: None,
                            named_window: [],
                            qualify: None,
                            window_before_qualify: false,
                            value_table_mode: None,
                            connect_by: None,
                        },
                    ),
                    order_by: None,
                    limit: None,
                    limit_by: [],
                    offset: None,
                    fetch: None,
                    locks: [],
                    for_clause: None,
                    settings: None,
                    format_clause: None,
                },
            ),
        ),
    ),
    Err(
        NotImplemented(
            "Unsupported SQL type Custom(ObjectName([Ident { value: \"OBJECT\", quote_style: None, span: Span(Location(0,0)..Location(0,0)) }]), [\"oname\", \"VARCHAR\", \"created_date\", \"DATE\"])",
        ),
    ),
    Err(
        Execution(
            "Failed to create logical plan",
        ),
    ),
)
