crates/runtime/src/tests/snapshots/query_union_explicit_cast.snap
---
source: crates/runtime/src/tests/queries.rs
description: "\"SELECT col1::VARCHAR FROM t1\nUNION\nSELECT col1::VARCHAR FROM t2;\""
snapshot_kind: text
---
(
    Ok(
        Statement(
            Query(
                Query {
                    with: None,
                    body: SetOperation {
                        op: Union,
                        set_quantifier: None,
                        left: Select(
                            Select {
                                select_token: TokenWithSpan {
                                    token: Word(
                                        Word {
                                            value: "SELECT",
                                            quote_style: None,
                                            keyword: SELECT,
                                        },
                                    ),
                                    span: Span(Location(0,0)..Location(0,0)),
                                },
                                distinct: None,
                                top: None,
                                top_before_distinct: false,
                                projection: [
                                    UnnamedExpr(
                                        Cast {
                                            kind: DoubleColon,
                                            expr: Identifier(
                                                Ident {
                                                    value: "col1",
                                                    quote_style: None,
                                                    span: Span(Location(0,0)..Location(0,0)),
                                                },
                                            ),
                                            data_type: Varchar(
                                                None,
                                            ),
                                            format: None,
                                        },
                                    ),
                                ],
                                into: None,
                                from: [
                                    TableWithJoins {
                                        relation: Table {
                                            name: ObjectName(
                                                [
                                                    Ident {
                                                        value: "t1",
                                                        quote_style: None,
                                                        span: Span(Location(0,0)..Location(0,0)),
                                                    },
                                                ],
                                            ),
                                            alias: None,
                                            args: None,
                                            with_hints: [],
                                            version: None,
                                            with_ordinality: false,
                                            partitions: [],
                                            json_path: None,
                                        },
                                        joins: [],
                                    },
                                ],
                                lateral_views: [],
                                prewhere: None,
                                selection: None,
                                group_by: Expressions(
                                    [],
                                    [],
                                ),
                                cluster_by: [],
                                distribute_by: [],
                                sort_by: [],
                                having: None,
                                named_window: [],
                                qualify: None,
                                window_before_qualify: false,
                                value_table_mode: None,
                                connect_by: None,
                            },
                        ),
                        right: Select(
                            Select {
                                select_token: TokenWithSpan {
                                    token: Word(
                                        Word {
                                            value: "SELECT",
                                            quote_style: None,
                                            keyword: SELECT,
                                        },
                                    ),
                                    span: Span(Location(0,0)..Location(0,0)),
                                },
                                distinct: None,
                                top: None,
                                top_before_distinct: false,
                                projection: [
                                    UnnamedExpr(
                                        Cast {
                                            kind: DoubleColon,
                                            expr: Identifier(
                                                Ident {
                                                    value: "col1",
                                                    quote_style: None,
                                                    span: Span(Location(0,0)..Location(0,0)),
                                                },
                                            ),
                                            data_type: Varchar(
                                                None,
                                            ),
                                            format: None,
                                        },
                                    ),
                                ],
                                into: None,
                                from: [
                                    TableWithJoins {
                                        relation: Table {
                                            name: ObjectName(
                                                [
                                                    Ident {
                                                        value: "t2",
                                                        quote_style: None,
                                                        span: Span(Location(0,0)..Location(0,0)),
                                                    },
                                                ],
                                            ),
                                            alias: None,
                                            args: None,
                                            with_hints: [],
                                            version: None,
                                            with_ordinality: false,
                                            partitions: [],
                                            json_path: None,
                                        },
                                        joins: [],
                                    },
                                ],
                                lateral_views: [],
                                prewhere: None,
                                selection: None,
                                group_by: Expressions(
                                    [],
                                    [],
                                ),
                                cluster_by: [],
                                distribute_by: [],
                                sort_by: [],
                                having: None,
                                named_window: [],
                                qualify: None,
                                window_before_qualify: false,
                                value_table_mode: None,
                                connect_by: None,
                            },
                        ),
                    },
                    order_by: None,
                    limit: None,
                    limit_by: [],
                    offset: None,
                    fetch: None,
                    locks: [],
                    for_clause: None,
                    settings: None,
                    format_clause: None,
                },
            ),
        ),
    ),
    Ok(
        [
            "Distinct:",
            "  Union",
            "    Projection: CAST(t1.col1 AS Utf8)",
            "      TableScan: t1",
            "    Projection: CAST(t2.col1 AS Utf8)",
            "      TableScan: t2",
        ],
    ),
    Ok(
        [
            "+---------+",
            "| t1.col1 |",
            "+---------+",
            "| 3       |",
            "| 4       |",
            "| 2       |",
            "| 1       |",
            "+---------+",
        ],
    ),
)
