crates/runtime/src/tests/snapshots/query_unpivot_include_nulls.snap
---
source: crates/runtime/src/tests/queries.rs
description: "\"SELECT *\n  FROM monthly_sales\n    UNPIVOT INCLUDE NULLS (sales FOR month IN (jan, feb, mar, apr))\n  ORDER BY empid;\""
snapshot_kind: text
---
(
    Err(
        SQL(
            ParserError(
                "Expected: (, found: INCLUDE",
            ),
            None,
        ),
    ),
    Err(
        SQL(
            ParserError(
                "Expected: (, found: INCLUDE",
            ),
            None,
        ),
    ),
    Err(
        Execution(
            "Failed to create logical plan",
        ),
    ),
)
